Create main color palete and header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,42 @@
     <link rel="stylesheet" href="src/css/main.css" />
   </head>
   <body>
-    Hi there
+    <header>
+      <div class="welcome">
+        <div class="welcome__content">
+          <div class="welcome__col">
+            <h1 class="welcome__greeting">
+              <em class="my-greeting">Hello, I am</em>
+              <span class="my-name line-on-sides">Stas Sribnyi</span>
+              <strong class="my-title">Front-End Engineer</strong>
+            </h1>
+            <p>
+              Nice to see you here. I am an experienced front-end engineer with
+              more than 4 years of working experience both with front-end and
+              back-end. I develop rich single-page web applications using a
+              variety of frameworks such as React and Angular. I will be glad to
+              collaborate with you.
+            </p>
+            <!-- <p>
+              I have one passion which drives me the most &mdash; challenge,
+              challenge to do things that not everyone can do.
+            </p> -->
+
+            <blockquote class="welcome__cite">
+              When it is obvious that the goals cannot be reached, don't adjust
+              the goals, adjust the action steps.
+              <cite>Сonfucius</cite>
+            </blockquote>
+          </div>
+        </div>
+        <div class="welcome__image">
+          <div class="welcome__col">
+            <a href="#" class="btn">Hire me</a>
+            <a href="#" class="btn btn--secondary">Contact me</a>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <script src="src/js/main.js" type="module"></script>
   </body>
