Update color palette and add learn more link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Stas Sribnyi | Front-End Engineer</title>
 
+    <link
+      rel="stylesheet"
+      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+    />
     <link rel="stylesheet" href="src/css/main.css" />
   </head>
   <body>
@@ -19,8 +23,8 @@
               <strong class="my-title">Front-End Engineer</strong>
             </h1>
             <p>
-              Nice to see you here. I am an experienced front-end engineer with
-              more than 4 years of working experience both with front-end and
+              Nice to see you here. I am a skilled front-end engineer with more
+              than 4 years of working experience both with front-end and
               back-end. I develop rich single-page web applications using a
               variety of frameworks such as React and Angular. I will be glad to
               collaborate with you.
@@ -43,6 +47,10 @@
             <a href="#" class="btn btn--secondary">Contact me</a>
           </div>
         </div>
+        <a href="#" class="welcome__show-more">
+          Wanna learn more what I do?
+          <span class="ion-chevron-down"></span>
+        </a>
       </div>
     </header>
 
