Add 'about me' section

--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
             <p>
               Nice to see you here. I am a skilled front-end engineer with more
               than 4 years of working experience both with front-end and
-              back-end. I develop rich single-page web applications using a
-              variety of frameworks such as React and Angular. I will be glad to
+              back-end. I develop single-page web applications using a variety
+              of frameworks such as React and Angular. I will be glad to
               collaborate with you.
             </p>
-            <!-- <p>
-              I have one passion which drives me the most &mdash; challenge,
-              challenge to do things that not everyone can do.
-            </p> -->
 
             <blockquote class="welcome__cite">
               When it is obvious that the goals cannot be reached, don't adjust
@@ -53,6 +49,53 @@
         </a>
       </div>
     </header>
+
+    <section class="about-me">
+      <div class="about-me__container">
+        <h2 class="about-me__title">
+          About me
+        </h2>
+        <div class="about-me__content">
+          <div class="about-me__details">
+            <ul>
+              <li class="about-me__detail">
+                <img
+                  class="about-me__photo"
+                  src="src/img/stassribnyi.jpg"
+                  alt="Stas Sribnyi"
+                />
+              </li>
+              <li class="about-me__detail">
+                <span>Name:</span>
+                <span>Stas Sribnyi</span>
+              </li>
+              <li class="about-me__detail">
+                <span>Age:</span>
+                <span>24 years</span>
+              </li>
+              <li class="about-me__detail">
+                <span>Location:</span>
+                <span> Europe, Ukraine, Kiev</span>
+              </li>
+            </ul>
+          </div>
+          <div class="about-me__description">
+            Hello again, I am Stas and I am front-end engineer 😊. Working with
+            UI is my passion and so I do it using the latest technologies such
+            as React and Angular (but personally prefer using React and Vanilla
+            Javascript 😁). Some time ago I used to be a full-stack engineer, so
+            I worked both with back and front end code. Now I use all my
+            knowledge in UI development world. I started my wonderful career
+            about five years ago by studying AltexSoft company full-stack
+            courses, I did my best to learn the most about software development
+            and apply for a job at this company. Since then I worked with
+            several companies, with the different teams, hold different
+            positions and I am here, to provide you with all that experience to
+            make you happy 😎.
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="src/js/main.js" type="module"></script>
   </body>
