--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
     <link rel="stylesheet" href="src/css/main.css" />
   </head>
@@ -97,6 +97,6 @@
       </div>
     </section>
 
-    <script src="src/js/main.js" type="module"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
