--- a/index.html
+++ b/index.html
@@ -51,48 +51,43 @@
     </header>
 
     <section class="about-me">
-      <div class="about-me__container">
-        <h2 class="about-me__title">
-          About me
-        </h2>
-        <div class="about-me__content">
-          <div class="about-me__details">
-            <ul>
-              <li class="about-me__detail">
-                <img
-                  class="about-me__photo"
-                  src="src/img/stassribnyi.jpg"
-                  alt="Stas Sribnyi"
-                />
-              </li>
-              <li class="about-me__detail">
-                <span>Name:</span>
-                <span>Stas Sribnyi</span>
-              </li>
-              <li class="about-me__detail">
-                <span>Age:</span>
-                <span>24 years</span>
-              </li>
-              <li class="about-me__detail">
-                <span>Location:</span>
-                <span> Europe, Ukraine, Kiev</span>
-              </li>
-            </ul>
-          </div>
-          <div class="about-me__description">
-            Hello again, I am Stas and I am front-end engineer 😊. Working with
-            UI is my passion and so I do it using the latest technologies such
-            as React and Angular (but personally prefer using React and Vanilla
-            Javascript 😁). Some time ago I used to be a full-stack engineer, so
-            I worked both with back and front end code. Now I use all my
-            knowledge in UI development world. I started my wonderful career
-            about five years ago by studying AltexSoft company full-stack
-            courses, I did my best to learn the most about software development
-            and apply for a job at this company. Since then I worked with
-            several companies, with the different teams, hold different
-            positions and I am here, to provide you with all that experience to
-            make you happy 😎.
-          </div>
+      <h2 class="about-me__title">
+        About me
+      </h2>
+      <div class="about-me__content">
+        <div class="about-me__details">
+          <img
+            class="about-me__photo"
+            src="src/img/stassribnyi.jpg"
+            alt="Stas Sribnyi"
+          />
+          <ul>
+            <li class="about-me__detail">
+              <span>Name:</span>
+              <span>Stas Sribnyi</span>
+            </li>
+            <li class="about-me__detail">
+              <span>Age:</span>
+              <span>24 years</span>
+            </li>
+            <li class="about-me__detail">
+              <span>Location:</span>
+              <span> Europe, Ukraine, Kiev</span>
+            </li>
+          </ul>
+        </div>
+        <div class="about-me__description">
+          Hello again, I am Stas and I am front-end engineer 😊. Working with UI
+          is my passion and so I do it using the latest technologies such as
+          React and Angular (but personally prefer using React and Vanilla
+          Javascript 😁). Some time ago I used to be a full-stack engineer, so I
+          worked both with back and front end code. Now I use all my knowledge
+          in UI development world. I started my wonderful career about five
+          years ago by studying AltexSoft company full-stack courses, I did my
+          best to learn the most about software development and apply for a job
+          at this company. Since then I worked with several companies, with the
+          different teams, hold different positions and I am here, to provide
+          you with all that experience to make you happy 😎.
         </div>
       </div>
     </section>
