Update content and styles

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <div class="welcome__image">
           <div class="welcome__col">
-            <a href="#" class="btn">Hire me</a>
-            <a href="#" class="btn btn--secondary">Contact me</a>
+            <a href="#contacts" class="btn">Hire me</a>
+            <a href="#contacts" class="btn btn--secondary">Contact me</a>
           </div>
         </div>
         <nav class="navigation">
@@ -213,7 +213,7 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -222,8 +222,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
             </ul>
@@ -259,8 +259,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -268,9 +268,9 @@
                 <span class="skills__item-strength">
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -297,10 +297,10 @@
                 <p>NodeJS</p>
                 <span class="skills__item-strength">
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
             </ul>
@@ -327,8 +327,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -347,8 +347,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -388,7 +388,7 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -462,8 +462,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -471,19 +471,19 @@
                 <span class="skills__item-strength">
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
                 <p>Grunt</p>
                 <span class="skills__item-strength">
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -492,8 +492,8 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -501,9 +501,9 @@
                 <span class="skills__item-strength">
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
               <li class="skills__item">
@@ -523,7 +523,7 @@
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
                   <span class="ion-flash"></span>
-                  <span class="ion-flash"></span>
+                  <span class="ion-flash ion-flash--disabled"></span>
                 </span>
               </li>
             </ul>
