Add 'Career' section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <li><a class="navigation__link" href="#about">/about</a></li>
               <li><a class="navigation__link" href="#skills">/skills</a></li>
               <li>
-                <a class="navigation__link" href="#experience">/experience</a>
+                <a class="navigation__link" href="#career">/career</a>
               </li>
             </ul>
             <span class="navigation__show-more ion-chevron-down"></span>
@@ -108,11 +108,11 @@
           Javascript 😁). Some time ago I used to be a full-stack engineer, so I
           worked both with back and front end code. Now I use all my knowledge
           in UI development world. I started my wonderful career about five
-          years ago by studying AltexSoft company full-stack courses, I did my
+          years ago by studying full-stack software engineer courses, I did my
           best to learn the most about software development and apply for a job
-          at this company. Since then I worked with several companies, with the
-          different teams, hold different positions and I am here, to provide
-          you with all that experience to make you happy 😎.
+          at my first company. Since then I worked with several companies, with
+          the different teams, hold different positions and I am here, to
+          provide you with all that experience to make you happy 😎.
         </div>
       </div>
     </section>
@@ -531,6 +531,142 @@
         </div>
       </div>
     </section>
+
+    <section class="section career" id="career">
+      <h2 class="section__title career__title">
+        Career
+      </h2>
+      <div class="section__content career__content">
+        <ul class="career__stages">
+          <li class="career__stage">
+            <figure class="career__company">
+              <img src="src/img/innovecs.png" alt="Innovecs" />
+              <figcaption>
+                <p class="career__company-name">Innovecs</p>
+                <p>Apr 2019 &mdash; Present</p>
+              </figcaption>
+            </figure>
+            <div class="career__position">
+              <h4>Senior Software Engineer</h4>
+              <ul class="career__responsibilities">
+                <li>
+                  Development of new functionality and support for older once.
+                </li>
+                <li>Project architecture and code quality maintenance</li>
+                <li>Requirement gathering and clarifications.</li>
+                <li>
+                  Research of best suitable technologies for upcoming projects.
+                </li>
+              </ul>
+              <ul class="career__technologies">
+                <li>Javascript</li>
+                <li>Typescript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>SCSS</li>
+                <li>Ionic</li>
+                <li>Angular</li>
+                <li>NgRx</li>
+              </ul>
+            </div>
+          </li>
+          <li class="career__stage">
+            <figure class="career__company">
+              <img src="src/img/caspio.jpg" alt="Caspio" />
+              <figcaption>
+                <p class="career__company-name">Caspio</p>
+                <p>Aug 2017 &mdash; Apr 2019</p>
+              </figcaption>
+            </figure>
+            <div class="career__position">
+              <h4>Middle Software Engineer</h4>
+              <ul class="career__responsibilities">
+                <li>
+                  Researching and implementation of delivering user applications
+                  with PWAs using Angular and React.
+                </li>
+                <li>
+                  Development of the application designer and application
+                  builder based on Angular to provide users with ability to
+                  create their own dynamic applications in case of Caspio
+                  Platform.
+                </li>
+                <li>Work with team to develop application architecture.</li>
+                <li>
+                  Development of new site builder to replace obsolete
+                  server-based mechanism.
+                </li>
+              </ul>
+              <ul class="career__technologies">
+                <li>Javascript</li>
+                <li>Typescript</li>
+                <li>HTML5</li>
+                <li>Semantic HTML</li>
+                <li>JSON</li>
+                <li>XML</li>
+                <li>AJAX</li>
+                <li>CSS3</li>
+                <li>SCSS</li>
+                <li>React</li>
+                <li>Redux</li>
+                <li>Redux Thunk</li>
+                <li>Angular</li>
+                <li>RxJS</li>
+                <li>NodeJS</li>
+              </ul>
+            </div>
+          </li>
+          <li class="career__stage">
+            <figure class="career__company">
+              <img src="src/img/altexsoft.png" alt="AltexSoft" />
+              <figcaption>
+                <p class="career__company-name">AltexSoft</p>
+                <p>Jul 2015 &mdash; Aug 2017</p>
+              </figcaption>
+            </figure>
+            <div class="career__position">
+              <h4>Junior Software Engineer</h4>
+              <ul class="career__responsibilities">
+                <li>Development of .NET desktop and web applications.</li>
+                <li>
+                  Working with customers to establish requirements and determine
+                  priorities.
+                </li>
+                <li>
+                  Developing new applications, components & functionality to
+                  existing systems.
+                </li>
+                <li>
+                  Developing new functionalities, both back-end and front-end.
+                </li>
+                <li>
+                  Investigating alternate configurations & implementing better
+                  solutions.
+                </li>
+              </ul>
+              <ul class="career__technologies">
+                <li>.NET</li>
+                <li>C#</li>
+                <li>ASP.NET MVC</li>
+                <li>ASP.NET WebApi</li>
+                <li>ASP.NET Web Pages</li>
+                <li>Entity Framework</li>
+                <li>LINQ</li>
+                <li>T-SQL</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>AngularJS</li>
+                <li>JQuery</li>
+                <li>JQueryUI</li>
+                <li>WPF</li>
+                <li>SilverLight</li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <script src="src/js/main.js"></script>
   </body>
 </html>
