Add responsive behavior

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="welcome">
-        <div class="welcome__content">
+        <div class="welcome__content-side">
           <div class="welcome__col">
             <h1 class="welcome__greeting">
               <em class="my-greeting">Hello, I am</em>
@@ -43,7 +43,7 @@
             </blockquote>
           </div>
         </div>
-        <div class="welcome__image">
+        <div class="welcome__image-side">
           <div class="welcome__col">
             <a href="#contacts" class="btn">Hire me</a>
             <a href="#contacts" class="btn btn--secondary">Contact me</a>
@@ -55,19 +55,46 @@
           </p>
           <div class="navigation__links">
             <ul>
-              <li><a class="navigation__link" href="#about">/about</a></li>
-              <li><a class="navigation__link" href="#skills">/skills</a></li>
               <li>
-                <a class="navigation__link" href="#career">/career</a>
+                <a class="navigation__link" href="#about">
+                  <span class="navigation__link-icon ion-person"></span>
+                  <span class="navigation__link-text">/about</span>
+                </a>
+              </li>
+              <li>
+                <a class="navigation__link" href="#skills">
+                  <span class="navigation__link-icon ion-settings"></span>
+                  <span class="navigation__link-text">/skills</span>
+                </a>
+              </li>
+              <li>
+                <a class="navigation__link" href="#career">
+                  <span class="navigation__link-icon ion-briefcase"></span>
+                  <span class="navigation__link-text">/career</span>
+                </a>
               </li>
             </ul>
             <span class="navigation__show-more ion-chevron-down"></span>
             <ul>
               <li>
-                <a class="navigation__link" href="#projects">/projects</a>
+                <a class="navigation__link" href="#projects">
+                  <span
+                    class="navigation__link-icon ion-erlenmeyer-flask"
+                  ></span>
+                  <span class="navigation__link-text">/projects</span>
+                </a>
               </li>
               <li>
-                <a class="navigation__link" href="#contacts">/contacts</a>
+                <a class="navigation__link" href="#contacts">
+                  <span class="navigation__link-icon ion-at"></span>
+                  <span class="navigation__link-text">/contacts</span>
+                </a>
+              </li>
+              <li>
+                <a class="navigation__link" href="#contacts">
+                  <span class="navigation__link-icon ion-clipboard"></span>
+                  <span class="navigation__link-text">/cv</span>
+                </a>
               </li>
             </ul>
           </div>
