--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
       rel="stylesheet"
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400&display=swap"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
+      rel="stylesheet"
     />
-
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="src/css/query.css" />
   </head>
@@ -149,9 +152,7 @@
       <div class="section__content skills__content">
         <div class="skills__category-group ">
           <div class="skills__category">
-            <h3>
-              Front-End
-            </h3>
+            <h3>Front-End</h3>
             <ul class="skills__list">
               <li class="skills__item">
                 <p>Javascript / Typescript</p>
@@ -256,9 +257,7 @@
             </ul>
           </div>
           <div class="skills__category">
-            <h3>
-              Back-End
-            </h3>
+            <h3>Back-End</h3>
             <ul class="skills__list">
               <li class="skills__item">
                 <p>.NET Framework / C#</p>
@@ -564,134 +563,234 @@
         Career
       </h2>
       <div class="section__content career__content">
-        <ul class="career__stages">
-          <li class="career__stage">
-            <figure class="career__company">
-              <img src="src/img/innovecs.png" alt="Innovecs" />
-              <figcaption>
-                <p class="career__company-name">Innovecs</p>
-                <p>Apr 2019 &mdash; Present</p>
-              </figcaption>
-            </figure>
-            <div class="career__position">
-              <h4>Senior Software Engineer</h4>
-              <ul class="career__responsibilities">
-                <li>
-                  Development of new functionality and support for older once.
+        <ul class="career__groups">
+          <li class="career__group">
+            <h3 class="career__group-title">Work</h3>
+            <ul class="career__work-stages">
+              <li class="career__work-stage">
+                <figure class="career__company">
+                  <img src="src/img/innovecs.png" alt="Innovecs" />
+                  <figcaption>
+                    <p class="career__company-name">Innovecs</p>
+                    <p>Apr 2019 &mdash; Present</p>
+                  </figcaption>
+                </figure>
+                <div class="career__position">
+                  <h4>Senior Software Engineer</h4>
+                  <ul class="career__responsibilities">
+                    <li>
+                      Development of new functionality and support for older
+                      once.
+                    </li>
+                    <li>Project architecture and code quality maintenance</li>
+                    <li>Requirement gathering and clarifications.</li>
+                    <li>
+                      Research of best suitable technologies for upcoming
+                      projects.
+                    </li>
+                  </ul>
+                  <ul class="career__technologies">
+                    <li>Javascript</li>
+                    <li>Typescript</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>SCSS</li>
+                    <li>Ionic</li>
+                    <li>Angular</li>
+                    <li>NgRx</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="career__work-stage">
+                <figure class="career__company">
+                  <img src="src/img/caspio.png" alt="Caspio" />
+                  <figcaption>
+                    <p class="career__company-name">Caspio</p>
+                    <p>Aug 2017 &mdash; Apr 2019</p>
+                  </figcaption>
+                </figure>
+                <div class="career__position">
+                  <h4>Middle Software Engineer</h4>
+                  <ul class="career__responsibilities">
+                    <li>
+                      Researching and implementation of delivering user
+                      applications with PWAs using Angular and React.
+                    </li>
+                    <li>
+                      Development of the application designer and application
+                      builder based on Angular to provide users with ability to
+                      create their own dynamic applications in case of Caspio
+                      Platform.
+                    </li>
+                    <li>Work with team to develop application architecture.</li>
+                    <li>
+                      Development of new site builder to replace obsolete
+                      server-based mechanism.
+                    </li>
+                  </ul>
+                  <ul class="career__technologies">
+                    <li>Javascript</li>
+                    <li>Typescript</li>
+                    <li>HTML5</li>
+                    <li>Semantic HTML</li>
+                    <li>JSON</li>
+                    <li>XML</li>
+                    <li>AJAX</li>
+                    <li>CSS3</li>
+                    <li>SCSS</li>
+                    <li>React</li>
+                    <li>Redux</li>
+                    <li>Redux Thunk</li>
+                    <li>Angular</li>
+                    <li>RxJS</li>
+                    <li>NodeJS</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="career__work-stage">
+                <figure class="career__company">
+                  <img src="src/img/altexsoft.png" alt="AltexSoft" />
+                  <figcaption>
+                    <p class="career__company-name">AltexSoft</p>
+                    <p>Jul 2015 &mdash; Aug 2017</p>
+                  </figcaption>
+                </figure>
+                <div class="career__position">
+                  <h4>Junior Software Engineer</h4>
+                  <ul class="career__responsibilities">
+                    <li>Development of .NET desktop and web applications.</li>
+                    <li>
+                      Working with customers to establish requirements and
+                      determine priorities.
+                    </li>
+                    <li>
+                      Developing new applications, components & functionality to
+                      existing systems.
+                    </li>
+                    <li>
+                      Developing new functionalities, both back-end and
+                      front-end.
+                    </li>
+                    <li>
+                      Investigating alternate configurations & implementing
+                      better solutions.
+                    </li>
+                  </ul>
+                  <ul class="career__technologies">
+                    <li>.NET</li>
+                    <li>C#</li>
+                    <li>ASP.NET MVC</li>
+                    <li>ASP.NET WebApi</li>
+                    <li>ASP.NET Web Pages</li>
+                    <li>Entity Framework</li>
+                    <li>LINQ</li>
+                    <li>T-SQL</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>AngularJS</li>
+                    <li>JQuery</li>
+                    <li>JQueryUI</li>
+                    <li>WPF</li>
+                    <li>SilverLight</li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <li class="career__group">
+            <h3 class="career__group-title">Testimonials</h3>
+            <div class="carousel">
+              <ul class="carousel__items">
+                <li class="carousel__item">
+                  
                 </li>
-                <li>Project architecture and code quality maintenance</li>
-                <li>Requirement gathering and clarifications.</li>
-                <li>
-                  Research of best suitable technologies for upcoming projects.
+                <li class="carousel__item">
+                  Testimonial 2
                 </li>
-              </ul>
-              <ul class="career__technologies">
-                <li>Javascript</li>
-                <li>Typescript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>SCSS</li>
-                <li>Ionic</li>
-                <li>Angular</li>
-                <li>NgRx</li>
+                <li class="carousel__item">
+                  Testimonial 3
+                </li>
               </ul>
             </div>
           </li>
-          <li class="career__stage">
-            <figure class="career__company">
-              <img src="src/img/caspio.jpg" alt="Caspio" />
-              <figcaption>
-                <p class="career__company-name">Caspio</p>
-                <p>Aug 2017 &mdash; Apr 2019</p>
-              </figcaption>
-            </figure>
-            <div class="career__position">
-              <h4>Middle Software Engineer</h4>
-              <ul class="career__responsibilities">
-                <li>
-                  Researching and implementation of delivering user applications
-                  with PWAs using Angular and React.
-                </li>
-                <li>
-                  Development of the application designer and application
-                  builder based on Angular to provide users with ability to
-                  create their own dynamic applications in case of Caspio
-                  Platform.
-                </li>
-                <li>Work with team to develop application architecture.</li>
-                <li>
-                  Development of new site builder to replace obsolete
-                  server-based mechanism.
-                </li>
-              </ul>
-              <ul class="career__technologies">
-                <li>Javascript</li>
-                <li>Typescript</li>
-                <li>HTML5</li>
-                <li>Semantic HTML</li>
-                <li>JSON</li>
-                <li>XML</li>
-                <li>AJAX</li>
-                <li>CSS3</li>
-                <li>SCSS</li>
-                <li>React</li>
-                <li>Redux</li>
-                <li>Redux Thunk</li>
-                <li>Angular</li>
-                <li>RxJS</li>
-                <li>NodeJS</li>
-              </ul>
-            </div>
-          </li>
-          <li class="career__stage">
-            <figure class="career__company">
-              <img src="src/img/altexsoft.png" alt="AltexSoft" />
-              <figcaption>
-                <p class="career__company-name">AltexSoft</p>
-                <p>Jul 2015 &mdash; Aug 2017</p>
-              </figcaption>
-            </figure>
-            <div class="career__position">
-              <h4>Junior Software Engineer</h4>
-              <ul class="career__responsibilities">
-                <li>Development of .NET desktop and web applications.</li>
-                <li>
-                  Working with customers to establish requirements and determine
-                  priorities.
-                </li>
-                <li>
-                  Developing new applications, components & functionality to
-                  existing systems.
-                </li>
-                <li>
-                  Developing new functionalities, both back-end and front-end.
-                </li>
-                <li>
-                  Investigating alternate configurations & implementing better
-                  solutions.
-                </li>
-              </ul>
-              <ul class="career__technologies">
-                <li>.NET</li>
-                <li>C#</li>
-                <li>ASP.NET MVC</li>
-                <li>ASP.NET WebApi</li>
-                <li>ASP.NET Web Pages</li>
-                <li>Entity Framework</li>
-                <li>LINQ</li>
-                <li>T-SQL</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>AngularJS</li>
-                <li>JQuery</li>
-                <li>JQueryUI</li>
-                <li>WPF</li>
-                <li>SilverLight</li>
-              </ul>
-            </div>
+          <li class="career__group">
+            <h3 class="career__group-title">Education</h3>
+            <ul class="career__education-stages">
+              <li class="career__education-stage">
+                <figure class="career__institution">
+                  <img
+                    src="src/img/krnu.png"
+                    alt="Kremenchuk State Polytechnical University"
+                  />
+                  <figcaption>
+                    <p>Sept 2016 &mdash; Aug 2018</p>
+                  </figcaption>
+                </figure>
+                <div class="career__education">
+                  <h4 class="career__institution-name">
+                    Kremenchuk State Polytechnical University
+                  </h4>
+                  <p class="career__education-degree">
+                    Master's degree
+                  </p>
+                  <p class="career__education-field-of-study">
+                    Automation Engineer Technology/Technician
+                  </p>
+                </div>
+              </li>
+              <li class="career__education-stage">
+                <figure class="career__institution">
+                  <img src="src/img/altexsoft-labs.png" alt="AltexSoft Labs" />
+                  <figcaption>
+                    <p>Oct 2014 &mdash; Jul 2015</p>
+                  </figcaption>
+                </figure>
+                <div class="career__education">
+                  <h4 class="career__institution-name">
+                    AltexSoft Lab (.NET Tech Full-Stack)
+                  </h4>
+                  <p class="career__education-degree">
+                    Junior Software Engineer
+                  </p>
+                  <p class="career__education-field-of-study">
+                    Full-Stack .NET (C#/ASP.NET/EF/ADO.NET/WPF) and UI (HTML5,
+                    CSS3, JS, AngularJS) platforms development
+                  </p>
+                </div>
+              </li>
+              <li class="career__education-stage">
+                <figure class="career__institution">
+                  <img
+                    src="src/img/krnu.png"
+                    alt="Kremenchuk State Polytechnical University"
+                  />
+                  <figcaption>
+                    <p>Sept 2012 &mdash; Aug 2016</p>
+                  </figcaption>
+                </figure>
+                <div class="career__education">
+                  <h4 class="career__institution-name">
+                    Kremenchuk State Polytechnical University
+                  </h4>
+                  <p class="career__education-degree">
+                    Bachelor's degree
+                  </p>
+                  <p class="career__education-field-of-study">
+                    Automation Engineer Technology/Technician
+                  </p>
+                </div>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
+    </section>
+
+    <section class="section projects" id="projects">
+      <h2 class="section__title projects__title">
+        Projects
+      </h2>
+      <div class="section__content projects__content"></div>
     </section>
 
     <script src="src/js/main.js"></script>
