Add recommendations sub-section and update styles

--- a/index.html
+++ b/index.html
@@ -697,22 +697,7 @@
               </li>
             </ul>
           </li>
-          <li class="career__group">
-            <h3 class="career__group-title">Testimonials</h3>
-            <div class="carousel">
-              <ul class="carousel__items">
-                <li class="carousel__item">
-                  
-                </li>
-                <li class="carousel__item">
-                  Testimonial 2
-                </li>
-                <li class="carousel__item">
-                  Testimonial 3
-                </li>
-              </ul>
-            </div>
-          </li>
+
           <li class="career__group">
             <h3 class="career__group-title">Education</h3>
             <ul class="career__education-stages">
@@ -781,6 +766,157 @@
                 </div>
               </li>
             </ul>
+          </li>
+          <li class="career__group">
+            <h3 class="career__group-title">Recommendations</h3>
+            <div class="glide">
+              <div data-glide-el="track" class="glide__track">
+                <ul class="glide__slides">
+                  <li class="glide__slide">
+                    <blockquote class="career__recommendation">
+                      Stas is a very fast-learning developer, and he is a
+                      fast-minded person. I mean, he can find several solutions
+                      for resolving a task, and if no one works, Stas will find
+                      a couple more. I saw how Stas worked as a front- and as a
+                      back-developer, and it was cool. Stas has his own opinion,
+                      and arguments his position, but he hears the opponents and
+                      can change his mind, so, Stas is a good team-player. Stas
+                      organized the work process in his team as well, when it
+                      was needed.
+                      <cite>
+                        <a
+                          class="career__recommendation-details"
+                          href="https://www.linkedin.com/in/nickolay-sredin-518b2037/"
+                        >
+                          <img
+                            src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                            alt="Nickolay Sredin"
+                          />
+                          <div>
+                            <h4>Nikolai Sredin</h4>
+                            <p>Senior QA Engineer</p>
+                            <p>Managed me directly at Caspio</p>
+                          </div>
+                        </a>
+                      </cite>
+                    </blockquote>
+                  </li>
+                  <li class="glide__slide">
+                    <blockquote class="career__recommendation">
+                      Stas is an expert in vanilla Javascript, Angular
+                      framework. Stas has cool experience in React.js. His
+                      knowledge in OOP and design patterns were very helpful in
+                      many projects. His opinion was important in every
+                      architecture decision. Stas is a great team player.
+                      <cite>
+                        <a
+                          class="career__recommendation-details"
+                          href="https://www.linkedin.com/in/zakir-nuriev-8373b0a1/"
+                        >
+                          <img
+                            src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                            alt="Zakir Nuriev"
+                          />
+                          <div>
+                            <h4>Zakir Nuriev</h4>
+                            <p>Senior Front-End Developer</p>
+                            <p>Worked with me in different teams at Caspio</p>
+                          </div>
+                        </a>
+                      </cite>
+                    </blockquote>
+                  </li>
+                  <li class="glide__slide">
+                    <blockquote class="career__recommendation">
+                      Stas was the technical frontend lead in my current
+                      project. He has strong skills in the frontend area. He is
+                      also keen on sharing his knowledge: he will guide you to
+                      find a better solution or explain something if is not
+                      clear for you. In his work he is guided by design patterns
+                      and always pays much care and attention to the code
+                      quality. I'm glad I could work with him!
+                      <cite>
+                        <a
+                          class="career__recommendation-details"
+                          href="https://www.linkedin.com/in/beata-dobosiewicz-a64802ba/"
+                        >
+                          <img
+                            src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                            alt="Beata Dobosiewicz"
+                          />
+                          <div>
+                            <h4>Beata Dobosiewicz</h4>
+                            <p>Full-Stack .NET Developer</p>
+                            <p>Reported directly to me at Caspio</p>
+                          </div>
+                        </a>
+                      </cite>
+                    </blockquote>
+                  </li>
+                  <li class="glide__slide">
+                    <blockquote class="career__recommendation">
+                      Way back when being a part of a team hiring junior .NET
+                      software engineers from the company's training courses,
+                      Stanislav impressed me by not only his programming skills
+                      but also his openness and thirst for knowledge. Since then
+                      we worked with Stanislav on several projects and he proved
+                      himself as both a responsible skilful Software Engineer
+                      and a great Team Player. As a full-stack .NET software
+                      engineer, he was able to resolve both front- and back-end
+                      tasks at a high level. Stanislav’s dedication to the
+                      projects, ability to learn quickly, and openness for new
+                      challenges is worth mentioning, too. It was only a
+                      pleasure to have such an Asset in the project team!
+                      <cite>
+                        <a
+                          class="career__recommendation-details"
+                          href="https://www.linkedin.com/in/vgordiyenko/"
+                        >
+                          <img
+                            src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                            alt="Vitaliy Gordiyenko"
+                          />
+                          <div>
+                            <h4>Vitaliy Gordiyenko</h4>
+                            <p>Senior Project Manager</p>
+                            <p>Managed me directly at AltexSoft</p>
+                          </div>
+                        </a>
+                      </cite>
+                    </blockquote>
+                  </li>
+                  <li class="glide__slide">
+                    <blockquote class="career__recommendation">
+                      I had to work on several projects with Stas. Stas is a
+                      very enterprising, responsible and motivated person who
+                      follows innovations in the field of technologies and tries
+                      to introduce them into working solutions, he always brings
+                      his work to the end while making preparations for the
+                      future so that in the future it is possible to introduce
+                      new ideas as quickly and optimally as possible. This is
+                      the person with whom I would like to meet somewhere else
+                      on the project.
+                      <cite>
+                        <a
+                          class="career__recommendation-details"
+                          href="https://www.linkedin.com/in/anton-vasko-b87088a2/"
+                        >
+                          <img
+                            src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                            alt="Anton Vasko"
+                          />
+                          <div>
+                            <h4>Anton Vasko</h4>
+                            <p>Senior Software Engineering</p>
+                            <p>Worked together at the same team in AltexSoft</p>
+                          </div>
+                        </a>
+                      </cite>
+                    </blockquote>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
