Add project section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <nav class="navigation">
           <p class="navigation__title">
-            Wanna learn more what I do?
+            Wanna learn more what I can do?
           </p>
           <div class="navigation__links">
             <ul>
@@ -150,7 +150,7 @@
     <section class="section skills" id="skills">
       <h2 class="section__title skills__title">Skills</h2>
       <div class="section__content skills__content">
-        <div class="skills__category-group ">
+        <div class="skills__category-group">
           <div class="skills__category">
             <h3>Front-End</h3>
             <ul class="skills__list">
@@ -926,7 +926,120 @@
       <h2 class="section__title projects__title">
         Projects
       </h2>
-      <div class="section__content projects__content"></div>
+      <div class="section__content projects__content">
+        <ul class="projects__list">
+          <li class="projects__item">
+            <figure>
+              <img
+                class="projects__item-thumbnail"
+                src="src/img/projects/canvas-practice.jpg"
+                alt="Thumbnail Name"
+              />
+              <figcaption>
+                <div class="project__item-details">
+                  <h3 class="projects__item-name">HTML5 Canvas Playground</h3>
+                  <p class="projects__item-description">
+                    The playground I've made to try some cool things with
+                    canvas. There you can find snake and tic-tac-toe game and
+                    some of the experiments with particles.
+                  </p>
+                  <ul class="projects__item-tags">
+                    <li class="projects__item-tag">JS (ES6)</li>
+                    <li class="projects__item-tag">HTML5</li>
+                    <li class="projects__item-tag">HTML5 Canvas</li>
+                    <li class="projects__item-tag">CSS3</li>
+                  </ul>
+                </div>
+                <a
+                  href="https://stassribnyi.github.io/canvas-practice/"
+                  class="projects__item-link ion-link"
+                ></a>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="projects__item">
+            <figure>
+              <img
+                class="projects__item-thumbnail"
+                src="src/img/projects/todo-list-react.jpg"
+                alt="Thumbnail Name"
+              />
+              <figcaption>
+                <div class="project__item-details">
+                  <h3 class="projects__item-name">Todo List React</h3>
+                  <p class="projects__item-description">
+                    Simple to-do list made with React and Flux.
+                  </p>
+                  <ul class="projects__item-tags">
+                    <li class="projects__item-tag">React</li>
+                    <li class="projects__item-tag">Flux</li>
+                    <li class="projects__item-tag">Bootwatch</li>
+                  </ul>
+                </div>
+                <a
+                  href="https://stassribnyi.github.io/todo-list-react/#/"
+                  class="projects__item-link ion-link"
+                ></a>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="projects__item">
+            <figure>
+              <img
+                class="projects__item-thumbnail"
+                src="src/img/projects/image-manager.jpg"
+                alt="Thumbnail Name"
+              />
+              <figcaption>
+                <div class="project__item-details">
+                  <h3 class="projects__item-name">Image Manager</h3>
+                  <p class="projects__item-description">
+                    Simple image manager made with React, Redux and basic PWA
+                    support.
+                  </p>
+                  <ul class="projects__item-tags">
+                    <li class="projects__item-tag">React</li>
+                    <li class="projects__item-tag">Redux</li>
+                    <li class="projects__item-tag">PWA</li>
+                    <li class="projects__item-tag">Axios</li>
+                  </ul>
+                </div>
+                <a
+                  href="https://stassribnyi.github.io/image-manager/"
+                  class="projects__item-link ion-link"
+                ></a>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="projects__item">
+            <figure>
+              <img
+                class="projects__item-thumbnail"
+                src="src/img/projects/magic-app-redux.jpg"
+                alt="Thumbnail Name"
+              />
+              <figcaption>
+                <div class="project__item-details">
+                  <h3 class="projects__item-name">Magic App (Redux)</h3>
+                  <p class="projects__item-description">
+                    Understanding and practicing with Redux state container and
+                    Parcel.
+                  </p>
+                  <ul class="projects__item-tags">
+                    <li class="projects__item-tag">React</li>
+                    <li class="projects__item-tag">Redux</li>
+                    <li class="projects__item-tag">Parcel</li>
+                  </ul>
+                </div>
+                <a
+                  href="https://stassribnyi.github.io/magic-app-redux/"
+                  class="projects__item-link ion-link"
+                ></a>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <script src="src/js/main.js"></script>
